# tasko

./: README.md  com.github.xfgusta.tasko.json  meson.build
build-aux/meson/: postinstall.py
data/: com.github.xfgusta.tasko.appdata.xml.in  com.github.xfgusta.tasko.desktop.in  com.github.xfgusta.tasko.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build  pt_BR.po  tasko.pot
src/: application.py  database.py  define.py  meson.build  tasko.gresource.xml  tasko.in  window.py
src/ui/: about.ui  menu.ui  task_row.ui  window.ui
